Add completed investments.

--- a/src/app/pages/stock/completed-investments/completed-investments.component.html
+++ b/src/app/pages/stock/completed-investments/completed-investments.component.html
@@ -1,6 +1,6 @@
 <nb-card *ngIf="user">
   <nb-card-header>
-    Active Investments
+    Completed Investments
   </nb-card-header>
 
   <nb-card-body>
