Add rockt bot email and sms notifications.

--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -7,19 +7,52 @@
       pictureUrl="../../../../assets/images/rocket-flat.svg"
       description="Rocket identifies the rocket stocks; The stocks that go to the moooon!"
     ></ngx-bot-profile>
+    <nb-card>
+      <nb-card-header>
+        Rocket Email
+        <div class="switch-container pull-right">
+          <label class="theme-switch">
+            <span class="off">OFF</span>
+            <div class="switch">
+              <input type="checkbox" [checked]="isEmailNotify()" (change)="toggleEmailNotify(email.checked)" #email>
+              <span class="slider"></span>
+            </div>
+            <span class="on">ON</span>
+          </label>
+        </div>
+      </nb-card-header>
+      <nb-card-body>
+        Email me when a rocket is spotted.
+      </nb-card-body>
+    </nb-card>
+    <nb-card>
+      <nb-card-header>
+        Rocket SMS
+        <div class="switch-container pull-right">
+          <label class="theme-switch">
+            <span class="off">OFF</span>
+            <div class="switch">
+              <input type="checkbox" [checked]="isSmsNotify()" (change)="toggleSmsNotify(sms.checked)" #sms>
+              <span class="slider"></span>
+            </div>
+            <span class="on">ON</span>
+          </label>
+        </div>
+      </nb-card-header>
+      <nb-card-body>
+        Text me when a rocket is spotted.
+      </nb-card-body>
+    </nb-card>
   </div>
   <div class="col-md-6">
-  <!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
-  <nb-card>
-    <nb-card-header>
-      Rocket Stocks
-      <!--<hr>-->
-      <!--<span style="font-size: smaller; font-weight: lighter;">{{createdAt}}</span>-->
-    </nb-card-header>
-
-    <nb-card-body>
-      <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">
-      </ng2-smart-table>
-    </nb-card-body>
-  </nb-card>
-  </div></div>
+    <nb-card>
+      <nb-card-header>
+        Rocket Stocks
+      </nb-card-header>
+      <nb-card-body>
+          <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">
+        </ng2-smart-table>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>
