--- a/src/app/pages/bots/bruno/bruno.component.html
+++ b/src/app/pages/bots/bruno/bruno.component.html
@@ -1,9 +1,14 @@
-<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-  <ngx-bot-profile
-    title="Bruno"
-    subtitle="Strategy"
-    type="primary"
-    pictureUrl="../../../../assets/images/bruno-flat.svg"
-    description="Bruno helps you get stocks when they go on sale. Tell Bruno which stocks to watch and when the price is right he will snatch them up."
-  ></ngx-bot-profile>
+<div class="row">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-bot-profile
+      title="Bruno"
+      subtitle="Strategy"
+      type="primary"
+      pictureUrl="../../../../assets/images/bruno-flat.svg"
+      description="Bruno helps you get stocks when they go on sale. Tell Bruno which stocks to watch and when the price is right he will snatch them up"
+    ></ngx-bot-profile>
+  </div>
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    Coming soon
+  </div>
 </div>
