--- a/src/app/pages/bots/dot/dot.component.html
+++ b/src/app/pages/bots/dot/dot.component.html
@@ -1,9 +1,14 @@
+<div class="row">
 <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
   <ngx-bot-profile
     title="Dot"
     subtitle="Profit"
     type="success"
     pictureUrl="../../../../assets/images/dot-flat.svg"
-    description="Sells stocks at their peak."
+    description="Sells stocks at their peak. Coming soon."
   ></ngx-bot-profile>
+</div>
+<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  Coming soon
+</div>
 </div>
