--- a/src/app/pages/bots/geoffrey/geoffrey.component.html
+++ b/src/app/pages/bots/geoffrey/geoffrey.component.html
@@ -5,10 +5,13 @@
       subtitle="Safety"
       type="info"
       pictureUrl="../../../../assets/images/geoffrey-flat.svg"
-      description="Prevents investments from losing."
+      description="Prevents investments from losing. Coming soon."
     ></ngx-bot-profile>
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-stop-loss></ngx-stop-loss>
+  </div>
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    Coming soon
   </div>
 </div>
