--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -24,6 +24,9 @@
       <nb-card-body>
         Email me when a rocket is spotted.
       </nb-card-body>
+      <nb-card-footer>
+        <span class="pull-right">FREE</span>
+      </nb-card-footer>
     </nb-card>
     <nb-card>
       <nb-card-header>
@@ -41,18 +44,70 @@
       </nb-card-header>
       <nb-card-body>
         Text me when a rocket is spotted.
+        <span *ngIf="!isSmsSubscribed()">
+        <br><br>*Turning on this switch starts your free one month trial.
+          </span>
+        <br>
+        <hr>
+        <div *ngIf="user && user.phone">{{user.phone}}
+
+          <button class="btn btn-danger pull-right" (click)="deletePhone()">Delete</button>
+        </div>
+        <div class="form-group" *ngIf="user &&!user.phone">
+          <input type="tel" placeholder="Phone number" class="form-control" [(ngModel)]="newPhone"/>
+          <small class="form-text">(format: xxxxxxxxxx) no dashes
+          </small>
+          <button class="btn btn-secondary pull-right" (click)="addPhone()">Apply</button>
+        </div>
       </nb-card-body>
+      <nb-card-footer>
+        <span class="pull-right">$3/mo</span>
+      </nb-card-footer>
+    </nb-card>
+    <nb-card>
+      <nb-card-header>
+        Rocket Stocks Premarket
+        <!--<div class="switch-container pull-right">-->
+        <!--<label class="theme-switch">-->
+        <!--<span class="off">OFF</span>-->
+        <!--<div class="switch">-->
+        <!--<input type="checkbox" [checked]="isSmsNotify()" (change)="toggleSmsNotify(sms.checked)" #sms>-->
+        <!--<span class="slider"></span>-->
+        <!--</div>-->
+        <!--<span class="on">ON</span>-->
+        <!--</label>-->
+        <!--</div>-->
+      </nb-card-header>
+      <nb-card-body>
+        Show me the Rocket Stock picks in premarket.
+      </nb-card-body>
+      <nb-card-footer>
+        <span class="pull-right">Coming soon</span>
+      </nb-card-footer>
     </nb-card>
   </div>
-  <div class="col-md-6">
+  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
     <nb-card>
       <nb-card-header>
         Rocket Stocks
       </nb-card-header>
       <nb-card-body>
-          <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">
+        <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">
         </ng2-smart-table>
       </nb-card-body>
+    </nb-card>
+    <nb-card>
+      <nb-card-header>
+        Clearance Bin
+      </nb-card-header>
+      <nb-card-body>
+        Stocks that are on sale.<br><br>
+        So you like to "buy the dip"? This is the place for you! Offering statistical analysis on stock low points based
+        on historical trends.
+      </nb-card-body>
+      <nb-card-footer>
+        <span class="pull-right">Coming Soon</span>
+      </nb-card-footer>
     </nb-card>
   </div>
 </div>
