--- a/src/app/pages/bots/rocket/rocket.component.scss
+++ b/src/app/pages/bots/rocket/rocket.component.scss
@@ -91,15 +91,15 @@
     }
   }
 
-  @include media-breakpoint-down(is) {
-    .light, .cosmic {
-      display: none;
-    }
-  }
-
-  @include media-breakpoint-down(xs) {
-    //align-items: flex-end;
-
-    display: none;
-  }
+  //@include media-breakpoint-down(is) {
+  //  .light, .cosmic {
+  //    display: none;
+  //  }
+  //}
+  //
+  //@include media-breakpoint-down(xs) {
+  //  //align-items: flex-end;
+  //
+  //  display: none;
+  //}
 }
