--- a/src/app/pages/stock/completed-investments/completed-investments.component.html
+++ b/src/app/pages/stock/completed-investments/completed-investments.component.html
@@ -1,3 +1,12 @@
+<nb-card *ngIf="!user">
+  <nb-card-header>
+    Completed Investments
+  </nb-card-header>
+
+  <nb-card-body>
+    Coming soon.
+  </nb-card-body>
+</nb-card>
 <nb-card *ngIf="user">
   <nb-card-header>
     Completed Investments
