--- a/src/app/pages/stock/strategies/strategies.component.html
+++ b/src/app/pages/stock/strategies/strategies.component.html
@@ -1,3 +1,11 @@
+<nb-card *ngIf="!user">
+  <nb-card-header>
+    Strategies
+  </nb-card-header>
+  <nb-card-body>
+    Coming soon.
+  </nb-card-body>
+</nb-card>
 <nb-card *ngIf="user">
   <nb-card-header>
     Strategies
