--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header>Hi</nb-card-header>
+      <nb-card-header>{{isLoggedIn}}</nb-card-header>
       <nb-card-body>
         You are logged in.
       </nb-card-body>
