--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header>{{isLoggedIn}}</nb-card-header>
+      <nb-card-header>Login</nb-card-header>
       <nb-card-body>
-        You are logged in.
+        {{loginMessage}}
       </nb-card-body>
     </nb-card>
   </div>
