--- a/src/app/pages/subscriptions/subscriptions.component.html
+++ b/src/app/pages/subscriptions/subscriptions.component.html
@@ -151,12 +151,13 @@
         Payment
       </nb-card-header>
       <nb-card-body *ngIf="user">
-        <div *ngIf="!user.stripeCustomer.sources.data[0]">
-          <span class="card-info">No payment info</span>
+        <div *ngIf="!user.stripeCustomer.sources.data[0]" class="input-group">
+          <label class="form-control">No payment info</label>
           <button class="btn btn-primary pull-right" (click)="openCheckout()">Set up</button>
         </div>
-        <div *ngIf="user.stripeCustomer.sources.data[0]">
-          <span class="card-info">{{user.stripeCustomer.sources.data[0].brand}} - {{user.stripeCustomer.sources.data[0].last4}}</span>
+        <div *ngIf="user.stripeCustomer.sources.data[0]" class="input-group">
+          <label class="form-control">{{user.stripeCustomer.sources.data[0].brand}} -
+            {{user.stripeCustomer.sources.data[0].last4}}</label>
           <button class="btn btn-info pull-right" (click)="openCheckout()">Change</button>
         </div>
       </nb-card-body>
@@ -182,6 +183,23 @@
       </nb-card-body>
       <nb-card-footer>
         <button class="btn btn-secondary pull-right" (click)="addCoupon()">Apply</button>
+      </nb-card-footer>
+    </nb-card>
+  </div>
+  <div class="col-xxl-3 col-xxl-4 col-md-6">
+    <nb-card>
+      <nb-card-header>
+        Email
+      </nb-card-header>
+      <nb-card-body *ngIf="user">
+        <div class="input-group">
+          <label class="form-control" *ngIf="!isEditEmail">{{email}}</label>
+          <input type="text" placeholder="Email" class="form-control" *ngIf="isEditEmail" [(ngModel)]="email"/>
+        </div>
+      </nb-card-body>
+      <nb-card-footer>
+        <button class="btn btn-secondary pull-right" *ngIf="!isEditEmail" (click)="toggleEditEmail()">Change</button>
+        <button class="btn btn-info pull-right" *ngIf="isEditEmail" (click)="changeEmail()">Apply</button>
       </nb-card-footer>
     </nb-card>
   </div>
