--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -67,23 +67,23 @@
     </nb-card>
     <nb-card>
       <nb-card-header>
-        Rocket Premarket
-        <!--<div class="switch-container pull-right">-->
-          <!--<label class="theme-switch">-->
-            <!--<span class="off text-hint">OFF</span>-->
-            <!--<div class="switch">-->
-              <!--<input disabled="disabled" type="checkbox" [checked]="isSmsNotify()" (change)="toggleSmsNotify(sms.checked)" #sms>-->
-              <!--<span class="slider"></span>-->
-            <!--</div>-->
-            <!--<span class="on text-hint">ON</span>-->
-          <!--</label>-->
-        <!--</div>-->
+        Rocket Extended
+        <div class="switch-container pull-right">
+          <label class="theme-switch">
+            <span class="off text-hint">OFF</span>
+            <div class="switch">
+              <input type="checkbox" [checked]="isExtendedHours()" (change)="toggleExtended(extended.checked)" #extended>
+              <span class="slider"></span>
+            </div>
+            <span class="on text-hint">ON</span>
+          </label>
+        </div>
       </nb-card-header>
       <nb-card-body>
-        Show me the Rocket Stock picks in premarket.
+        Show me the Rocket Bot picks in extended hours from 9:00AM to 6:00PM. Normal hours are 9:30AM to 4:00PM
       </nb-card-body>
       <nb-card-footer>
-        <span class="pull-right">Coming soon</span>
+        <span class="pull-right">$1/mo</span>
       </nb-card-footer>
     </nb-card>
     <nb-card>
@@ -114,27 +114,49 @@
     </nb-card>
   </div>
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+    <!--<nb-card>-->
+      <!--<nb-card-header>-->
+        <!--Rocket Stocks-->
+      <!--</nb-card-header>-->
+      <!--<nb-card-body>-->
+        <!--<ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">-->
+        <!--</ng2-smart-table>-->
+      <!--</nb-card-body>-->
+    <!--</nb-card>-->
     <nb-card>
       <nb-card-header>
-        Rocket Stocks
+        Rocket Stocks Algorithm
+        <!--<hr>-->
+        <!--stuff-->
       </nb-card-header>
       <nb-card-body>
-        <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">
+        <ng2-smart-table [settings]="rocketAlgorithmSettings" [source]="rocketAlgorithmSource" (userRowSelect)="onUserRowSelect($event)">
         </ng2-smart-table>
       </nb-card-body>
     </nb-card>
     <nb-card>
       <nb-card-header>
-        Clearance Bin
+        Bargain Bin Algorithm
+        <!--<hr>-->
+        <!--stuff-->
       </nb-card-header>
       <nb-card-body>
-        Stocks that are on sale.<br><br>
-        So you like to "buy the dip"? This is the place for you! Offering statistical analysis on stock low points based
-        on historical trends.
+        <ng2-smart-table [settings]="bargainAlgorithmSettings" [source]="bargainAlgorithmSource" (userRowSelect)="onUserRowSelect($event)">
+        </ng2-smart-table>
       </nb-card-body>
-      <nb-card-footer>
-        <span class="pull-right">Coming Soon</span>
-      </nb-card-footer>
     </nb-card>
+    <!--<nb-card>-->
+      <!--<nb-card-header>-->
+        <!--Clearance Bin-->
+      <!--</nb-card-header>-->
+      <!--<nb-card-body>-->
+        <!--Stocks that are on sale.<br><br>-->
+        <!--So you like to "buy the dip"? This is the place for you! Offering statistical analysis on stock low points based-->
+        <!--on historical trends.-->
+      <!--</nb-card-body>-->
+      <!--<nb-card-footer>-->
+        <!--<span class="pull-right">Coming Soon</span>-->
+      <!--</nb-card-footer>-->
+    <!--</nb-card>-->
   </div>
 </div>
