--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -23,7 +23,8 @@
       </nb-card-header>
       <nb-card-body>
         <div *ngIf="!user">Email me when a rocket is spotted.</div>
-        <div *ngIf="user&&user.email">{{user.email}} <span (click)="changeEmail()" class="pull-right text-info">change</span></div>
+        <div *ngIf="user&&user.email">{{user.email}} <span (click)="changeEmail()"
+                                                           class="pull-right text-info">change</span></div>
       </nb-card-body>
       <nb-card-footer>
         <span class="pull-right">FREE</span>
@@ -72,7 +73,8 @@
           <label class="theme-switch">
             <span class="off text-hint">OFF</span>
             <div class="switch">
-              <input type="checkbox" [checked]="isExtendedHours()" (change)="toggleExtended(extended.checked)" #extended>
+              <input type="checkbox" [checked]="isExtendedHours()" (change)="toggleExtended(extended.checked)"
+                     #extended>
               <span class="slider"></span>
             </div>
             <span class="on text-hint">ON</span>
@@ -92,12 +94,14 @@
       </nb-card-header>
       <nb-card-body>
         <div *ngIf="!user">
-          <i class="nb-lightbulb"></i> You should <span (click)="goToLogin()" class="text-primary">login</span> to get a better experience.
+          <i class="nb-lightbulb"></i> You should <span (click)="goToLogin()" class="text-primary">login</span> to get a
+          better experience.
           <br>
           <hr>
         </div>
         <div *ngIf="user">
-          <i class="nb-lightbulb"></i> You might want to <span (click)="changeEmail()" class="text-primary">change your email</span> instead.
+          <i class="nb-lightbulb"></i> You might want to <span (click)="changeEmail()" class="text-primary">change your email</span>
+          instead.
           <br>
           <hr>
         </div>
@@ -115,48 +119,53 @@
   </div>
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
     <!--<nb-card>-->
-      <!--<nb-card-header>-->
-        <!--Rocket Stocks-->
-      <!--</nb-card-header>-->
-      <!--<nb-card-body>-->
-        <!--<ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">-->
-        <!--</ng2-smart-table>-->
-      <!--</nb-card-body>-->
+    <!--<nb-card-header>-->
+    <!--Rocket Stocks-->
+    <!--</nb-card-header>-->
+    <!--<nb-card-body>-->
+    <!--<ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onUserRowSelect($event)">-->
+    <!--</ng2-smart-table>-->
+    <!--</nb-card-body>-->
     <!--</nb-card>-->
     <nb-card>
       <nb-card-header>
         Rocket Stocks Algorithm
-        <!--<hr>-->
-        <!--stuff-->
       </nb-card-header>
       <nb-card-body>
-        <ng2-smart-table [settings]="rocketAlgorithmSettings" [source]="rocketAlgorithmSource" (userRowSelect)="onUserRowSelect($event)">
+        <sub>These uptrending stocks are showing strange fluctuations in volume. The technicals are good. Buckle up;
+          we are go for launch.</sub>
+        <br>
+        <br>
+        <ng2-smart-table [settings]="rocketAlgorithmSettings" [source]="rocketAlgorithmSource"
+                         (userRowSelect)="onUserRowSelect($event)">
         </ng2-smart-table>
       </nb-card-body>
     </nb-card>
     <nb-card>
       <nb-card-header>
         Bargain Bin Algorithm
-        <!--<hr>-->
-        <!--stuff-->
       </nb-card-header>
       <nb-card-body>
-        <ng2-smart-table [settings]="bargainAlgorithmSettings" [source]="bargainAlgorithmSource" (userRowSelect)="onUserRowSelect($event)">
+        <sub>Good stocks having a bad day.</sub>
+        <br>
+        <br>
+        <ng2-smart-table [settings]="bargainAlgorithmSettings" [source]="bargainAlgorithmSource"
+                         (userRowSelect)="onUserRowSelect($event)">
         </ng2-smart-table>
       </nb-card-body>
     </nb-card>
     <!--<nb-card>-->
-      <!--<nb-card-header>-->
-        <!--Clearance Bin-->
-      <!--</nb-card-header>-->
-      <!--<nb-card-body>-->
-        <!--Stocks that are on sale.<br><br>-->
-        <!--So you like to "buy the dip"? This is the place for you! Offering statistical analysis on stock low points based-->
-        <!--on historical trends.-->
-      <!--</nb-card-body>-->
-      <!--<nb-card-footer>-->
-        <!--<span class="pull-right">Coming Soon</span>-->
-      <!--</nb-card-footer>-->
+    <!--<nb-card-header>-->
+    <!--Clearance Bin-->
+    <!--</nb-card-header>-->
+    <!--<nb-card-body>-->
+    <!--Stocks that are on sale.<br><br>-->
+    <!--So you like to "buy the dip"? This is the place for you! Offering statistical analysis on stock low points based-->
+    <!--on historical trends.-->
+    <!--</nb-card-body>-->
+    <!--<nb-card-footer>-->
+    <!--<span class="pull-right">Coming Soon</span>-->
+    <!--</nb-card-footer>-->
     <!--</nb-card>-->
   </div>
 </div>
