Started chart for dot bot.

--- a/src/app/pages/bots/dot/dot.component.html
+++ b/src/app/pages/bots/dot/dot.component.html
@@ -8,7 +8,8 @@
     description="Sells stocks at their peak. Coming soon."
   ></ngx-bot-profile>
 </div>
-<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-  Coming soon
+  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+    <canvas id="myChart"></canvas>
+  </div>
 </div>
-</div>
+
