Toastr for email list.

--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -90,6 +90,7 @@
     </nb-card>
     <nb-card>
       <nb-card-header>
+        <toaster-container [toasterconfig]="config"></toaster-container>
         Rocket List
       </nb-card-header>
       <nb-card-body>
