--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -1,4 +1,31 @@
 <div class="row">
+  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+    <nb-card>
+      <nb-card-header>
+        Rocket Stocks
+      </nb-card-header>
+      <nb-card-body>
+        <sub>These uptrending stocks are showing strange fluctuations in volume. The technicals are good. Buckle up;
+          we are go for launch.</sub>
+        <br>
+        <br>
+        <ng2-smart-table [settings]="rocketAlgorithmSettings" [source]="rocketAlgorithmSource"
+                         (userRowSelect)="onUserRowSelect($event)">
+        </ng2-smart-table>
+      </nb-card-body>
+    </nb-card>
+    <!-- <nb-card>
+      <nb-card-header>
+        Rocket Trend
+      </nb-card-header>
+      <nb-card-body>
+        <sub>These stocks are looking good, but not quite good enough to notify you about.</sub>
+        <br>
+        <br>
+        <canvas id="myChart"></canvas>
+      </nb-card-body>
+    </nb-card> -->
+  </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
       title="Rocket"
@@ -116,22 +143,6 @@
       <nb-card-footer>
         <span class="pull-right">FREE</span>
       </nb-card-footer>
-    </nb-card>
-  </div>
-  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
-    <nb-card>
-      <nb-card-header>
-        Rocket Stocks
-      </nb-card-header>
-      <nb-card-body>
-        <sub>These uptrending stocks are showing strange fluctuations in volume. The technicals are good. Buckle up;
-          we are go for launch.</sub>
-        <br>
-        <br>
-        <ng2-smart-table [settings]="rocketAlgorithmSettings" [source]="rocketAlgorithmSource"
-                         (userRowSelect)="onUserRowSelect($event)">
-        </ng2-smart-table>
-      </nb-card-body>
     </nb-card>
   </div>
 </div>
